--- a/packages.bib
+++ b/packages.bib
@@ -80,12 +80,38 @@ experiments},
   note = {R package version 1.78.0},
 }
 
+@Manual{R-GenomeInfoDb,
+  title = {GenomeInfoDb: Utilities for manipulating chromosome names, including modifying
+them to follow a particular naming style},
+  author = {Sonali Arora and Martin Morgan and Marc Carlson and H. Pagès},
+  year = {2022},
+  note = {R package version 1.32.4},
+  url = {https://bioconductor.org/packages/GenomeInfoDb},
+}
+
+@Manual{R-GenomicRanges,
+  title = {GenomicRanges: Representation and manipulation of genomic intervals},
+  author = {P. Aboyoun and H. Pagès and M. Lawrence},
+  year = {2022},
+  note = {R package version 1.48.0},
+  url = {https://bioconductor.org/packages/GenomicRanges},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2023},
   note = {R package version 3.4.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-ggrepel,
+  title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
+ggplot2},
+  author = {Kamil Slowikowski},
+  year = {2023},
+  note = {R package version 0.9.3},
+  url = {https://github.com/slowkow/ggrepel},
 }
 
 @Manual{R-gridExtra,
@@ -104,6 +130,14 @@ experiments},
   url = {https://github.com/HenrikBengtsson/illuminaio},
 }
 
+@Manual{R-IRanges,
+  title = {IRanges: Foundation of integer range manipulation in Bioconductor},
+  author = {H. Pagès and P. Aboyoun and M. Lawrence},
+  year = {2022},
+  note = {R package version 2.30.1},
+  url = {https://bioconductor.org/packages/IRanges},
+}
+
 @Manual{R-isva,
   title = {isva: Independent Surrogate Variable Analysis},
   author = {Andrew E Teschendorff},
@@ -119,6 +153,14 @@ and Some BSS Performance Criteria},
   year = {2020},
   note = {R package version 2.0-3},
   url = {https://CRAN.R-project.org/package=JADE},
+}
+
+@Manual{R-karyoploteR,
+  title = {karyoploteR: Plot customizable linear genomes displaying arbitrary data},
+  author = {Bernat Gel},
+  year = {2022},
+  note = {R package version 1.22.0},
+  url = {https://github.com/bernatgel/karyoploteR},
 }
 
 @Manual{R-knitr,
@@ -243,6 +285,14 @@ Estimation},
   url = {https://github.com/bmbolstad/preprocessCore},
 }
 
+@Manual{R-qqman,
+  title = {qqman: Q-Q and Manhattan Plots for GWAS Data},
+  author = {Stephen Turner},
+  year = {2021},
+  note = {R package version 0.1.8},
+  url = {https://github.com/stephenturner/qqman},
+}
+
 @Manual{R-quadprog,
   title = {quadprog: Functions to Solve Quadratic Programming Problems},
   author = {Berwin A. Turlach and Andreas Weingessel},
@@ -257,6 +307,14 @@ Estimation},
   year = {2022},
   note = {R package version 2.28.0},
   url = {http://github.com/jdstorey/qvalue},
+}
+
+@Manual{R-regioneR,
+  title = {regioneR: Association analysis of genomic regions based on permutation
+tests},
+  author = {Anna Diez-Villanueva and Roberto Malinverni and Bernat Gel},
+  year = {2022},
+  note = {R package version 1.28.0},
 }
 
 @Manual{R-reshape2,
@@ -281,6 +339,15 @@ Estimation},
   year = {2022},
   note = {R package version 0.16-1},
   url = {https://github.com/yixuan/RSpectra},
+}
+
+@Manual{R-S4Vectors,
+  title = {S4Vectors: Foundation of vector-like and list-like containers in
+Bioconductor},
+  author = {H. Pagès and M. Lawrence and P. Aboyoun},
+  year = {2022},
+  note = {R package version 0.34.0},
+  url = {https://bioconductor.org/packages/S4Vectors},
 }
 
 @Manual{R-sandwich,
@@ -390,6 +457,17 @@ Ordered Observations)},
   doi = {10.1093/bioinformatics/btx145},
 }
 
+@Article{GenomicRanges2013,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+  year = {2013},
+  journal = {{PLoS} Computational Biology},
+  volume = {9},
+  issue = {8},
+  doi = {10.1371/journal.pcbi.1003118},
+  url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
 @Book{ggplot22016,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -411,6 +489,17 @@ Ordered Observations)},
   pubmed = {24701342},
 }
 
+@Article{IRanges2013,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+  year = {2013},
+  journal = {{PLoS} Computational Biology},
+  volume = {9},
+  issue = {8},
+  doi = {10.1371/journal.pcbi.1003118},
+  url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
 @Article{JADE2017,
   title = {Blind Source Separation Based on Joint Diagonalization in {R}: The Packages {JADE} and {BSSasymp}},
   author = {Jari Miettinen and Klaus Nordhausen and Sara Taskinen},
@@ -420,6 +509,18 @@ Ordered Observations)},
   number = {2},
   pages = {1--31},
   doi = {10.18637/jss.v076.i02},
+}
+
+@Article{karyoploteR,
+  title = {karyoploteR : an R / Bioconductor package to plot customizable genomes displaying arbitrary data},
+  author = {Bernat Gel and Eduard Serra},
+  journal = {Bioinformatics},
+  year = {2017},
+  volume = {33},
+  number = {19},
+  pages = {3088-3090},
+  doi = {10.1093/bioinformatics/btx346},
+  pubmed = {28575171},
 }
 
 @Book{knitr2015,
@@ -574,6 +675,26 @@ likelihood estimation of semiparametric generalized linear models},
   number = {1},
   pages = {1--29},
   url = {https://www.jstatsoft.org/v40/i01/},
+}
+
+@Article{qqman2018,
+  title = {qqman: an R package for visualizing GWAS results using Q-Q and manhattan plots},
+  author = {Stephen Turner},
+  journal = {The Journal of Open Source Software},
+  year = {2018},
+  doi = {10.21105/joss.00731},
+}
+
+@Article{regioneR,
+  title = {regioneR: an R/Bioconductor package for the association analysis of genomic regions based on permutation tests},
+  author = {Bernat Gel and Anna Diez-Villanueva and Eduard Serra and Marcus Buschbeck and Miguel A. Peinado and Roberto Malinverni},
+  journal = {Bioinformatics},
+  year = {2016},
+  volume = {32},
+  number = {2},
+  pages = {289-291},
+  doi = {10.1093/bioinformatics/btv562},
+  pubmed = {26424858},
 }
 
 @Article{reshape22007,
