--- a/packages.bib
+++ b/packages.bib
@@ -31,12 +31,36 @@
   url = {https://github.com/Bioconductor/BiocParallel},
 }
 
+@Manual{R-Biostrings,
+  title = {Biostrings: Efficient manipulation of biological strings},
+  author = {H. Pagès and P. Aboyoun and R. Gentleman and S. DebRoy},
+  year = {2022},
+  note = {R package version 2.64.1},
+  url = {https://bioconductor.org/packages/Biostrings},
+}
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2023},
   note = {R package version 0.34},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+
+@Manual{R-brgedata,
+  title = {brgedata: Exposures, Gene Expression and Methylation data for ilustration
+purpouses},
+  author = {Dolors Pelegri-Siso and Carlos Ruiz-Arenas and Carles Hernandez-Ferrer and Juan R. Gonzalez},
+  year = {2022},
+  note = {R package version 1.18.0},
+}
+
+@Manual{R-bumphunter,
+  title = {bumphunter: Bump Hunter},
+  author = {Rafael A. Irizarry and Martin Aryee and Kasper Daniel Hansen and Hector Corrada Bravo},
+  year = {2022},
+  note = {R package version 1.38.0},
+  url = {https://github.com/rafalab/bumphunter},
 }
 
 @Manual{R-Cairo,
@@ -56,12 +80,36 @@ PostScript) and Display (X11 and Win32) Output},
   note = {R package version 1.70.0},
 }
 
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {R package version 1.1.2},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
 @Manual{R-fastICA,
   title = {fastICA: FastICA Algorithms to Perform ICA and Projection Pursuit},
   author = {J L Marchini and C Heaton and B D Ripley},
   year = {2021},
   note = {R package version 1.2-3},
   url = {https://CRAN.R-project.org/package=fastICA},
+}
+
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{R-foreach,
+  title = {foreach: Provides Foreach Looping Construct},
+  author = {{Revolution Analytics} and Steve Weston}},
+  year = {2022},
+  note = {R package version 1.5.2},
+  url = {https://github.com/RevolutionAnalytics/foreach},
 }
 
 @Manual{R-gdsfmt,
@@ -95,6 +143,13 @@ them to follow a particular naming style},
   year = {2022},
   note = {R package version 1.48.0},
   url = {https://bioconductor.org/packages/GenomicRanges},
+}
+
+@Manual{R-GEOquery,
+  title = {GEOquery: Get data from NCBI Gene Expression Omnibus (GEO)},
+  author = {Sean Davis},
+  year = {2022},
+  note = {https://github.com/seandavi/GEOquery},
 }
 
 @Manual{R-ggplot2,
@@ -146,6 +201,14 @@ ggplot2},
   url = {https://CRAN.R-project.org/package=isva},
 }
 
+@Manual{R-iterators,
+  title = {iterators: Provides Iterator Construct},
+  author = {Revolution Analytics and Steve Weston},
+  year = {2022},
+  note = {R package version 1.0.14},
+  url = {https://github.com/RevolutionAnalytics/iterators},
+}
+
 @Manual{R-JADE,
   title = {JADE: Blind Source Separation Methods Based on Joint Diagonalization
 and Some BSS Performance Criteria},
@@ -153,6 +216,14 @@ and Some BSS Performance Criteria},
   year = {2020},
   note = {R package version 2.0-3},
   url = {https://CRAN.R-project.org/package=JADE},
+}
+
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2021},
+  note = {R package version 1.3.4},
+  url = {https://CRAN.R-project.org/package=kableExtra},
 }
 
 @Manual{R-karyoploteR,
@@ -195,6 +266,14 @@ and Some BSS Performance Criteria},
   url = {https://CRAN.R-project.org/package=lmtest},
 }
 
+@Manual{R-locfit,
+  title = {locfit: Local Regression, Likelihood and Density Estimation},
+  author = {Catherine Loader},
+  year = {2022},
+  note = {R package version 1.5-9.6},
+  url = {https://CRAN.R-project.org/package=locfit},
+}
+
 @Manual{R-markdown,
   title = {markdown: Render Markdown with commonmark},
   author = {Yihui Xie and JJ Allaire and Jeffrey Horner},
@@ -219,6 +298,15 @@ and Some BSS Performance Criteria},
   url = {https://CRAN.R-project.org/package=Matrix},
 }
 
+@Manual{R-MatrixGenerics,
+  title = {MatrixGenerics: S4 Generic Summary Statistic Functions that Operate on
+Matrix-Like Objects},
+  author = {Constantin Ahlmann-Eltze and Peter Hickey and Hervé Pagès},
+  year = {2022},
+  note = {R package version 1.8.1},
+  url = {https://bioconductor.org/packages/MatrixGenerics},
+}
+
 @Manual{R-matrixStats,
   title = {matrixStats: Functions that Apply to Rows and Columns of Matrices (and to
 Vectors)},
@@ -236,6 +324,15 @@ Vectors)},
   url = {https://github.com/perishky/meffil},
 }
 
+@Manual{R-meta,
+  title = {meta: General Package for Meta-Analysis},
+  author = {Guido Schwarzer},
+  year = {2023},
+  note = {R package version 6.2-1},
+  url = {https://github.com/guido-s/meta/
+https://link.springer.com/book/10.1007/978-3-319-21416-0},
+}
+
 @Manual{R-mgcv,
   title = {mgcv: Mixed GAM Computation Vehicle with Automatic Smoothness
 Estimation},
@@ -243,6 +340,14 @@ Estimation},
   year = {2022},
   note = {R package version 1.8-40},
   url = {https://CRAN.R-project.org/package=mgcv},
+}
+
+@Manual{R-minfi,
+  title = {minfi: Analyze Illumina Infinium DNA methylation arrays},
+  author = {Kasper Daniel Hansen and Martin Aryee and Rafael A. Irizarry},
+  year = {2022},
+  note = {R package version 1.42.0},
+  url = {https://github.com/hansenlab/minfi},
 }
 
 @Manual{R-multcomp,
@@ -285,6 +390,14 @@ Estimation},
   url = {https://github.com/bmbolstad/preprocessCore},
 }
 
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
 @Manual{R-qqman,
   title = {qqman: Q-Q and Manhattan Plots for GWAS Data},
   author = {Stephen Turner},
@@ -307,6 +420,14 @@ Estimation},
   year = {2022},
   note = {R package version 2.28.0},
   url = {http://github.com/jdstorey/qvalue},
+}
+
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.1.2},
+  url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{R-regioneR,
@@ -374,6 +495,22 @@ Bioconductor},
   url = {https://CRAN.R-project.org/package=statmod},
 }
 
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2022},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{R-SummarizedExperiment,
+  title = {SummarizedExperiment: SummarizedExperiment container},
+  author = {Martin Morgan and Valerie Obenchain and Jim Hester and Hervé Pagès},
+  year = {2022},
+  note = {R package version 1.26.1},
+  url = {https://bioconductor.org/packages/SummarizedExperiment},
+}
+
 @Manual{R-survival,
   title = {survival: Survival Analysis},
   author = {Terry M Therneau},
@@ -395,6 +532,39 @@ Bioconductor},
   year = {2022},
   note = {R package version 1.1-1},
   url = {https://CRAN.R-project.org/package=TH.data},
+}
+
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2023},
+  note = {R package version 3.2.1},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham and Maximilian Girlich},
+  year = {2022},
+  note = {R package version 1.2.0},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the Tidyverse},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+}
+
+@Manual{R-XVector,
+  title = {XVector: Foundation of external vector representation and manipulation in
+Bioconductor},
+  author = {Hervé Pagès and Patrick Aboyoun},
+  year = {2022},
+  note = {R package version 0.36.0},
+  url = {https://bioconductor.org/packages/XVector},
 }
 
 @Manual{R-zoo,
@@ -438,6 +608,30 @@ Ordered Observations)},
   url = {https://bookdown.org/yihui/bookdown},
 }
 
+@Article{bumphunter,
+  author = {Andrew E. Jaffe and Peter Murakami and Hwajin Lee and Jeffrey T. Leek and Daniele M. Fallin and Andrew P. Feinberg and Rafael A. Irizarry},
+  title = {Bump hunting to identify differentially methylated regions in epigenetic epidemiology studies},
+  journal = {International journal of epidemiology},
+  year = {2012},
+  volume = {41},
+  number = {1},
+  pages = {200--209},
+  doi = {10.1093/ije/dyr238},
+  pubmed = {22422453},
+}
+
+@Article{minfi,
+  title = {Minfi: A flexible and comprehensive Bioconductor package for the analysis of Infinium DNA Methylation microarrays},
+  author = {Martin J. Aryee and Andrew E. Jaffe and Hector Corrada-Bravo and Christine Ladd-Acosta and Andrew P. Feinberg and Kasper D. Hansen and Rafael A. Irizarry},
+  year = {2014},
+  journal = {Bioinformatics},
+  volume = {30},
+  number = {10},
+  pages = {1363--1369},
+  doi = {10.1093/bioinformatics/btu049},
+  pubmed = {24478339},
+}
+
 @Article{gdsfmt2012,
   title = {A High-performance Computing Toolset for Relatedness and Principal Component Analysis of SNP Data},
   author = {Xiuwen Zheng and David Levine and Jess Shen and Stephanie Gogarten and Cathy Laurie and Bruce Weir},
@@ -466,6 +660,15 @@ Ordered Observations)},
   issue = {8},
   doi = {10.1371/journal.pcbi.1003118},
   url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
+@Article{GEOquery2007,
+  author = {Sean Davis and Paul Meltzer},
+  title = {GEOquery: a bridge between the Gene Expression Omnibus (GEO) and BioConductor},
+  journal = {Bioinformatics},
+  year = {2007},
+  volume = {14},
+  pages = {1846--1847},
 }
 
 @Book{ggplot22016,
@@ -588,6 +791,15 @@ Ordered Observations)},
   url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
+@Article{meta2019,
+  title = {How to perform a meta-analysis with {R}: a practical tutorial},
+  author = {Sara Balduzzi and Gerta Rücker and Guido Schwarzer},
+  journal = {Evidence-Based Mental Health},
+  year = {2019},
+  number = {22},
+  pages = {153--160},
+}
+
 @Article{mgcv2011,
   title = {Fast stable restricted maximum likelihood and marginal 
 likelihood estimation of semiparametric generalized linear models},
@@ -635,6 +847,87 @@ likelihood estimation of semiparametric generalized linear models},
   pages = {95-114},
   year = {2003},
   author = {S. N. Wood},
+}
+
+@Article{minfi,
+  title = {{Minfi: A flexible and comprehensive Bioconductor package for the analysis of Infinium DNA Methylation microarrays}},
+  author = {Martin J. Aryee and Andrew E. Jaffe and Hector Corrada-Bravo and Christine Ladd-Acosta and Andrew P. Feinberg and Kasper D. Hansen and Rafael A. Irizarry},
+  year = {2014},
+  journal = {Bioinformatics},
+  volume = {30},
+  number = {10},
+  pages = {1363--1369},
+  doi = {10.1093/bioinformatics/btu049},
+  pubmed = {24478339},
+}
+
+@Article{SWAN,
+  author = {Jovana Maksimovic and Lavinia Gordon and Alicia Oshlack},
+  title = {{SWAN: Subset quantile Within-Array Normalization for Illumina Infinium HumanMethylation450 BeadChips}},
+  journal = {Genome Biology},
+  year = {2012},
+  volume = {13},
+  number = {6},
+  pages = {R44},
+  doi = {10.1186/gb-2012-13-6-r44},
+  pubmed = {22703947},
+}
+
+@Article{funnorm,
+  author = {Jean-Philippe Fortin and Aurelie Labbe and Mathieu Lemire and Brent W. Zanke and Thomas J. Hudson and Elana J. Fertig and Celia M.T. Greenwood and Kasper D. Hansen},
+  title = {Functional normalization of 450k methylation array data improves replication in large cancer studies},
+  journal = {Genome Biology},
+  year = {2014},
+  volume = {15},
+  number = {12},
+  pages = {503},
+  doi = {10.1186/s13059-014-0503-2},
+  pubmed = {25517394},
+}
+
+@Article{noob,
+  author = {Timothy J. Triche and Daniel J. Weisenberger and David {Van Den Berg} and Peter W. Laird and Kimberly D. Siegmund},
+  title = {Low-level processing of {Illumina} {Infinium} {DNA} {Methylation} {BeadArrays}},
+  journal = {Nucleic Acids Research},
+  year = {2013},
+  volume = {41},
+  number = {7},
+  pages = {e90},
+  doi = {10.1093/nar/gkt090},
+  pubmed = {23476028},
+}
+
+@Article{compartments,
+  author = {Jean-Philippe Fortin and Kasper D. Hansen},
+  title = {Reconstructing A/B compartments as revealed by Hi-C using long-range correlations in epigenetic data},
+  journal = {Genome Biology},
+  year = {2015},
+  volume = {16},
+  pages = {180},
+  doi = {10.1186/s13059-015-0741-y},
+  pubmed = {26316348},
+}
+
+@Article{gaphunter,
+  author = {Shan V. Andrews and Christine Ladd-Acosta and Andrew P. Feinberg and Kasper D. Hansen and M. Daniele Fallin},
+  title = {'Gap hunting' to characterize clustered probe signals in Illumina methylation array data},
+  journal = {Epigenetics & Chromatin},
+  year = {2016},
+  volume = {9},
+  pages = {56},
+  doi = {10.1186/s13072-016-0107-z},
+  pubmed = {27980682},
+}
+
+@Article{minfiEpic,
+  author = {Jean-Philippe Fortin and Timothy J. Triche and Kasper D. Hansen},
+  title = {Preprocessing, normalization and integration of the Illumina HumanMethylationEPIC array with minfi},
+  journal = {Bioinformatics},
+  year = {2017},
+  volume = {33},
+  number = {4},
+  page = {558-560},
+  doi = {10.1093/bioinformatics/btw691},
 }
 
 @Article{multcomp2008,
@@ -834,6 +1127,17 @@ likelihood estimation of semiparametric generalized linear models},
   publisher = {Springer},
   address = {New York},
   isbn = {0-387-98784-3},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
 }
 
 @Article{zoo2005,
