--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,12 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+
+@article{lawrence2013software,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Lawrence, M., Huber, W., Pagès, H., Aboyoun, P., Carlson, M., Gentleman, R., Morgan, M. T., & Carey, V. J.},
+  publisher = {PLoS computational biology},
+  volume = {9(8), e1003118},
+  year = {2013},
+  url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003118},
+}
